# note

./: AGENTS.md  Cargo.toml  README.md  justfile  release.sh
src/: app.rs  db.rs  highlight.rs  images.rs  main.rs  ui.rs
