[package]
name = "note"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arboard = { version = "3.4", features = ["image-data"] }
chrono = "0.4.43"
crossterm = "0.29.0"
dirs = "6.0.0"
image = "0.25"
ratatui = "0.30.0"
ratatui-image = { version = "10.0", default-features = false, features = ["crossterm", "image-defaults"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
